# FinAudit-Gate

./: .gitignore  README.md  financial_db.sqlite  pyproject.toml  requirements.txt  test_run.py
docs/: 10k_structure.md
scripts/: download_sample_10k.py  ingest.py  parse_10k.py
src/: __init__.py  calculator_tools.py  chunker.py  db_setup.py  edgar_tools.py  table_extractor.py  vector_store.py
src/agents/: analyst.py  auditor.py  llm_client.py  manager.py
